crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP022_UP022.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    ReplaceStdoutStderr: ~
  location:
    row: 4
    column: 9
  end_location:
    row: 4
    column: 69
  fix:
    content:
      - capture_output=True
    location:
      row: 4
      column: 22
    end_location:
      row: 4
      column: 68
  parent: ~
- kind:
    ReplaceStdoutStderr: ~
  location:
    row: 6
    column: 9
  end_location:
    row: 6
    column: 80
  fix:
    content:
      - capture_output=True
    location:
      row: 6
      column: 33
    end_location:
      row: 6
      column: 79
  parent: ~
- kind:
    ReplaceStdoutStderr: ~
  location:
    row: 8
    column: 9
  end_location:
    row: 8
    column: 86
  fix:
    content:
      - "capture_output=True, args=[\"foo\"]"
    location:
      row: 8
      column: 24
    end_location:
      row: 8
      column: 85
  parent: ~
- kind:
    ReplaceStdoutStderr: ~
  location:
    row: 10
    column: 9
  end_location:
    row: 12
    column: 1
  fix:
    content:
      - "capture_output=True, check=True"
    location:
      row: 11
      column: 13
    end_location:
      row: 11
      column: 71
  parent: ~
- kind:
    ReplaceStdoutStderr: ~
  location:
    row: 14
    column: 9
  end_location:
    row: 16
    column: 1
  fix:
    content:
      - "capture_output=True, check=True"
    location:
      row: 15
      column: 13
    end_location:
      row: 15
      column: 71
  parent: ~
- kind:
    ReplaceStdoutStderr: ~
  location:
    row: 18
    column: 9
  end_location:
    row: 26
    column: 1
  fix:
    content:
      - "capture_output=True,"
      - "    check=True"
    location:
      row: 20
      column: 4
    end_location:
      row: 22
      column: 26
  parent: ~
- kind:
    ReplaceStdoutStderr: ~
  location:
    row: 29
    column: 13
  end_location:
    row: 36
    column: 5
  fix:
    content:
      - "capture_output=True,"
      - "        check=True"
    location:
      row: 31
      column: 8
    end_location:
      row: 33
      column: 30
  parent: ~

