crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP024_2.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
./resources/test/fixtures/pyupgrade/UP024_2.py:10:7: UP024 [*] Replace aliased errors with `OSError`
   |
10 | # Testing the modules
11 | import socket, mmap, select
12 | raise socket.error
   |       ^^^^^^^^^^^^ UP024
13 | raise mmap.error
14 | raise select.error
   |
   = help: Replace `socket.error` with builtin `OSError`

ℹ Suggested fix
7  7  | 
8  8  | # Testing the modules
9  9  | import socket, mmap, select
10    |-raise socket.error
   10 |+raise OSError
11 11 | raise mmap.error
12 12 | raise select.error
13 13 | 

./resources/test/fixtures/pyupgrade/UP024_2.py:11:7: UP024 [*] Replace aliased errors with `OSError`
   |
11 | import socket, mmap, select
12 | raise socket.error
13 | raise mmap.error
   |       ^^^^^^^^^^ UP024
14 | raise select.error
   |
   = help: Replace `mmap.error` with builtin `OSError`

ℹ Suggested fix
8  8  | # Testing the modules
9  9  | import socket, mmap, select
10 10 | raise socket.error
11    |-raise mmap.error
   11 |+raise OSError
12 12 | raise select.error
13 13 | 
14 14 | raise socket.error()

./resources/test/fixtures/pyupgrade/UP024_2.py:12:7: UP024 [*] Replace aliased errors with `OSError`
   |
12 | raise socket.error
13 | raise mmap.error
14 | raise select.error
   |       ^^^^^^^^^^^^ UP024
15 | 
16 | raise socket.error()
   |
   = help: Replace `select.error` with builtin `OSError`

ℹ Suggested fix
9  9  | import socket, mmap, select
10 10 | raise socket.error
11 11 | raise mmap.error
12    |-raise select.error
   12 |+raise OSError
13 13 | 
14 14 | raise socket.error()
15 15 | raise mmap.error(1)

./resources/test/fixtures/pyupgrade/UP024_2.py:14:7: UP024 [*] Replace aliased errors with `OSError`
   |
14 | raise select.error
15 | 
16 | raise socket.error()
   |       ^^^^^^^^^^^^ UP024
17 | raise mmap.error(1)
18 | raise select.error(1, 2)
   |
   = help: Replace `socket.error` with builtin `OSError`

ℹ Suggested fix
11 11 | raise mmap.error
12 12 | raise select.error
13 13 | 
14    |-raise socket.error()
   14 |+raise OSError()
15 15 | raise mmap.error(1)
16 16 | raise select.error(1, 2)
17 17 | 

./resources/test/fixtures/pyupgrade/UP024_2.py:15:7: UP024 [*] Replace aliased errors with `OSError`
   |
15 | raise socket.error()
16 | raise mmap.error(1)
   |       ^^^^^^^^^^ UP024
17 | raise select.error(1, 2)
   |
   = help: Replace `mmap.error` with builtin `OSError`

ℹ Suggested fix
12 12 | raise select.error
13 13 | 
14 14 | raise socket.error()
15    |-raise mmap.error(1)
   15 |+raise OSError(1)
16 16 | raise select.error(1, 2)
17 17 | 
18 18 | raise socket.error(

./resources/test/fixtures/pyupgrade/UP024_2.py:16:7: UP024 [*] Replace aliased errors with `OSError`
   |
16 | raise socket.error()
17 | raise mmap.error(1)
18 | raise select.error(1, 2)
   |       ^^^^^^^^^^^^ UP024
19 | 
20 | raise socket.error(
   |
   = help: Replace `select.error` with builtin `OSError`

ℹ Suggested fix
13 13 | 
14 14 | raise socket.error()
15 15 | raise mmap.error(1)
16    |-raise select.error(1, 2)
   16 |+raise OSError(1, 2)
17 17 | 
18 18 | raise socket.error(
19 19 |     1,

./resources/test/fixtures/pyupgrade/UP024_2.py:18:7: UP024 [*] Replace aliased errors with `OSError`
   |
18 | raise select.error(1, 2)
19 | 
20 | raise socket.error(
   |       ^^^^^^^^^^^^ UP024
21 |     1,
22 |     2,
   |
   = help: Replace `socket.error` with builtin `OSError`

ℹ Suggested fix
15 15 | raise mmap.error(1)
16 16 | raise select.error(1, 2)
17 17 | 
18    |-raise socket.error(
   18 |+raise OSError(
19 19 |     1,
20 20 |     2,
21 21 |     3,

./resources/test/fixtures/pyupgrade/UP024_2.py:25:7: UP024 [*] Replace aliased errors with `OSError`
   |
25 | from mmap import error
26 | raise error
   |       ^^^^^ UP024
27 | 
28 | from socket import error
   |
   = help: Replace `error` with builtin `OSError`

ℹ Suggested fix
22 22 | )
23 23 | 
24 24 | from mmap import error
25    |-raise error
   25 |+raise OSError
26 26 | 
27 27 | from socket import error
28 28 | raise error(1)

./resources/test/fixtures/pyupgrade/UP024_2.py:28:7: UP024 [*] Replace aliased errors with `OSError`
   |
28 | from socket import error
29 | raise error(1)
   |       ^^^^^ UP024
30 | 
31 | from select import error
   |
   = help: Replace `error` with builtin `OSError`

ℹ Suggested fix
25 25 | raise error
26 26 | 
27 27 | from socket import error
28    |-raise error(1)
   28 |+raise OSError(1)
29 29 | 
30 30 | from select import error
31 31 | raise error(1, 2)

./resources/test/fixtures/pyupgrade/UP024_2.py:31:7: UP024 [*] Replace aliased errors with `OSError`
   |
31 | from select import error
32 | raise error(1, 2)
   |       ^^^^^ UP024
33 | 
34 | # Testing the names
   |
   = help: Replace `error` with builtin `OSError`

ℹ Suggested fix
28 28 | raise error(1)
29 29 | 
30 30 | from select import error
31    |-raise error(1, 2)
   31 |+raise OSError(1, 2)
32 32 | 
33 33 | # Testing the names
34 34 | raise EnvironmentError

./resources/test/fixtures/pyupgrade/UP024_2.py:34:7: UP024 [*] Replace aliased errors with `OSError`
   |
34 | # Testing the names
35 | raise EnvironmentError
   |       ^^^^^^^^^^^^^^^^ UP024
36 | raise IOError
37 | raise WindowsError
   |
   = help: Replace `EnvironmentError` with builtin `OSError`

ℹ Suggested fix
31 31 | raise error(1, 2)
32 32 | 
33 33 | # Testing the names
34    |-raise EnvironmentError
   34 |+raise OSError
35 35 | raise IOError
36 36 | raise WindowsError
37 37 | 

./resources/test/fixtures/pyupgrade/UP024_2.py:35:7: UP024 [*] Replace aliased errors with `OSError`
   |
35 | # Testing the names
36 | raise EnvironmentError
37 | raise IOError
   |       ^^^^^^^ UP024
38 | raise WindowsError
   |
   = help: Replace `IOError` with builtin `OSError`

ℹ Suggested fix
32 32 | 
33 33 | # Testing the names
34 34 | raise EnvironmentError
35    |-raise IOError
   35 |+raise OSError
36 36 | raise WindowsError
37 37 | 
38 38 | raise EnvironmentError()

./resources/test/fixtures/pyupgrade/UP024_2.py:36:7: UP024 [*] Replace aliased errors with `OSError`
   |
36 | raise EnvironmentError
37 | raise IOError
38 | raise WindowsError
   |       ^^^^^^^^^^^^ UP024
39 | 
40 | raise EnvironmentError()
   |
   = help: Replace `WindowsError` with builtin `OSError`

ℹ Suggested fix
33 33 | # Testing the names
34 34 | raise EnvironmentError
35 35 | raise IOError
36    |-raise WindowsError
   36 |+raise OSError
37 37 | 
38 38 | raise EnvironmentError()
39 39 | raise IOError(1)

./resources/test/fixtures/pyupgrade/UP024_2.py:38:7: UP024 [*] Replace aliased errors with `OSError`
   |
38 | raise WindowsError
39 | 
40 | raise EnvironmentError()
   |       ^^^^^^^^^^^^^^^^ UP024
41 | raise IOError(1)
42 | raise WindowsError(1, 2)
   |
   = help: Replace `EnvironmentError` with builtin `OSError`

ℹ Suggested fix
35 35 | raise IOError
36 36 | raise WindowsError
37 37 | 
38    |-raise EnvironmentError()
   38 |+raise OSError()
39 39 | raise IOError(1)
40 40 | raise WindowsError(1, 2)
41 41 | 

./resources/test/fixtures/pyupgrade/UP024_2.py:39:7: UP024 [*] Replace aliased errors with `OSError`
   |
39 | raise EnvironmentError()
40 | raise IOError(1)
   |       ^^^^^^^ UP024
41 | raise WindowsError(1, 2)
   |
   = help: Replace `IOError` with builtin `OSError`

ℹ Suggested fix
36 36 | raise WindowsError
37 37 | 
38 38 | raise EnvironmentError()
39    |-raise IOError(1)
   39 |+raise OSError(1)
40 40 | raise WindowsError(1, 2)
41 41 | 
42 42 | raise EnvironmentError(

./resources/test/fixtures/pyupgrade/UP024_2.py:40:7: UP024 [*] Replace aliased errors with `OSError`
   |
40 | raise EnvironmentError()
41 | raise IOError(1)
42 | raise WindowsError(1, 2)
   |       ^^^^^^^^^^^^ UP024
43 | 
44 | raise EnvironmentError(
   |
   = help: Replace `WindowsError` with builtin `OSError`

ℹ Suggested fix
37 37 | 
38 38 | raise EnvironmentError()
39 39 | raise IOError(1)
40    |-raise WindowsError(1, 2)
   40 |+raise OSError(1, 2)
41 41 | 
42 42 | raise EnvironmentError(
43 43 |     1,

./resources/test/fixtures/pyupgrade/UP024_2.py:42:7: UP024 [*] Replace aliased errors with `OSError`
   |
42 | raise WindowsError(1, 2)
43 | 
44 | raise EnvironmentError(
   |       ^^^^^^^^^^^^^^^^ UP024
45 |     1,
46 |     2,
   |
   = help: Replace `EnvironmentError` with builtin `OSError`

ℹ Suggested fix
39 39 | raise IOError(1)
40 40 | raise WindowsError(1, 2)
41 41 | 
42    |-raise EnvironmentError(
   42 |+raise OSError(
43 43 |     1,
44 44 |     2,
45 45 |     3,

./resources/test/fixtures/pyupgrade/UP024_2.py:48:7: UP024 [*] Replace aliased errors with `OSError`
   |
48 | )
49 | 
50 | raise WindowsError
   |       ^^^^^^^^^^^^ UP024
51 | raise EnvironmentError(1)
52 | raise IOError(1, 2)
   |
   = help: Replace `WindowsError` with builtin `OSError`

ℹ Suggested fix
45 45 |     3,
46 46 | )
47 47 | 
48    |-raise WindowsError
   48 |+raise OSError
49 49 | raise EnvironmentError(1)
50 50 | raise IOError(1, 2)

./resources/test/fixtures/pyupgrade/UP024_2.py:49:7: UP024 [*] Replace aliased errors with `OSError`
   |
49 | raise WindowsError
50 | raise EnvironmentError(1)
   |       ^^^^^^^^^^^^^^^^ UP024
51 | raise IOError(1, 2)
   |
   = help: Replace `EnvironmentError` with builtin `OSError`

ℹ Suggested fix
46 46 | )
47 47 | 
48 48 | raise WindowsError
49    |-raise EnvironmentError(1)
   49 |+raise OSError(1)
50 50 | raise IOError(1, 2)

./resources/test/fixtures/pyupgrade/UP024_2.py:50:7: UP024 [*] Replace aliased errors with `OSError`
   |
50 | raise WindowsError
51 | raise EnvironmentError(1)
52 | raise IOError(1, 2)
   |       ^^^^^^^ UP024
   |
   = help: Replace `IOError` with builtin `OSError`

ℹ Suggested fix
47 47 | 
48 48 | raise WindowsError
49 49 | raise EnvironmentError(1)
50    |-raise IOError(1, 2)
   50 |+raise OSError(1, 2)


