crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP025.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 12
  fix:
    edits:
      - location:
          row: 2
          column: 4
        end_location:
          row: 2
          column: 5
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 8
  fix:
    edits:
      - location:
          row: 4
          column: 0
        end_location:
          row: 4
          column: 1
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 6
    column: 6
  end_location:
    row: 6
    column: 14
  fix:
    edits:
      - location:
          row: 6
          column: 6
        end_location:
          row: 6
          column: 7
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 8
    column: 6
  end_location:
    row: 8
    column: 14
  fix:
    edits:
      - location:
          row: 8
          column: 6
        end_location:
          row: 8
          column: 7
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 12
    column: 4
  end_location:
    row: 12
    column: 12
  fix:
    edits:
      - location:
          row: 12
          column: 4
        end_location:
          row: 12
          column: 5
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 12
    column: 14
  end_location:
    row: 12
    column: 22
  fix:
    edits:
      - location:
          row: 12
          column: 14
        end_location:
          row: 12
          column: 15
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 12
    column: 26
  end_location:
    row: 12
    column: 34
  fix:
    edits:
      - location:
          row: 12
          column: 26
        end_location:
          row: 12
          column: 27
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 12
    column: 38
  end_location:
    row: 12
    column: 46
  fix:
    edits:
      - location:
          row: 12
          column: 38
        end_location:
          row: 12
          column: 39
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 12
  fix:
    edits:
      - location:
          row: 16
          column: 4
        end_location:
          row: 16
          column: 5
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 17
    column: 4
  end_location:
    row: 17
    column: 16
  fix:
    edits:
      - location:
          row: 17
          column: 4
        end_location:
          row: 17
          column: 5
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 18
    column: 4
  end_location:
    row: 18
    column: 16
  fix:
    edits:
      - location:
          row: 18
          column: 4
        end_location:
          row: 18
          column: 5
        content: ~
  parent: ~
- kind:
    name: UnicodeKindPrefix
    body: Remove unicode literals from strings
    suggestion: Remove unicode prefix
    fixable: true
  location:
    row: 19
    column: 4
  end_location:
    row: 19
    column: 20
  fix:
    edits:
      - location:
          row: 19
          column: 4
        end_location:
          row: 19
          column: 5
        content: ~
  parent: ~

